--- a/src/components/TargetCircle/TargetCircle.module.css
+++ b/src/components/TargetCircle/TargetCircle.module.css
@@ -1,6 +1,4 @@
-.target-box {
-  width: 40px;
-  height: 40px;
+.circle {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.3);
   border: 2px solid black;
