--- a/src/components/CharacterCard/CharacterCard.module.css
+++ b/src/components/CharacterCard/CharacterCard.module.css
@@ -6,11 +6,12 @@
   display: inline-flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 16px;
 }
 
 .card img {
-  width: 150px;
-  height: 150px;
+  width: 96px;
+  height: 96px;
 }
 
 .card span {
