--- a/src/components/Leaderboard/Leaderboard.module.css
+++ b/src/components/Leaderboard/Leaderboard.module.css
@@ -32,7 +32,15 @@
 }
 
 .table-container {
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
