--- a/src/components/EndScreen/EndScreen.module.css
+++ b/src/components/EndScreen/EndScreen.module.css
@@ -38,3 +38,25 @@
 .secondary {
   background-color: #6c757d;
 }
+
+.name-input {
+  flex: 1;
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 6px 8px;
+  margin: 8px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.name-input-label {
+  flex: 0;
+  width: 96px;
+  font-size: 20px;
+}
+
+.name-input-container {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
